crates/runtime/src/embeddings/index/snapshots/runtime__embeddings__index__tests__query_table_basic_metadata.snap
---
source: crates/runtime/src/embeddings/index/mod.rs
expression: "format!(\"{}\", pretty::pretty_format_batches(&col).map_err(|e| e.to_string())?)"
snapshot_kind: text
---
+---------------+----------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                   |
+---------------+----------------------------------------------------------------------------------------+
| logical_plan  | Sort: my_vectored_table.score DESC NULLS FIRST, fetch=5                                |
|               |   TableScan: my_vectored_table projection=[pk, score]                                  |
| physical_plan | SortExec: TopK(fetch=5), expr=[score@1 DESC NULLS LAST], preserve_partitioning=[false] |
|               |   ExplainExecutionPlan: projection=["pk", "score"] filter=[] limit=None                |
|               |                                                                                        |
+---------------+----------------------------------------------------------------------------------------+
