crates/runtime/src/embeddings/index/snapshots/runtime__embeddings__index__tests__query_table_join_for_filter_use_metadata.snap
---
source: crates/runtime/src/embeddings/index/mod.rs
expression: "format!(\"{}\", pretty::pretty_format_batches(&col).map_err(|e| e.to_string())?)"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                          |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: my_vectored_table.score DESC NULLS FIRST, fetch=5                                                                                                                                                                       |
|               |   Projection: my_vectored_table.pk, my_vectored_table.score                                                                                                                                                                   |
|               |     Filter: my_vectored_table.another_column != Utf8("something")                                                                                                                                                             |
|               |       TableScan: my_vectored_table projection=[pk, another_column, score], full_filters=[my_vectored_table.a_number > Int64(0)]                                                                                               |
| physical_plan | SortPreservingMergeExec: [score@1 DESC], fetch=5                                                                                                                                                                              |
|               |   SortExec: TopK(fetch=5), expr=[score@1 DESC], preserve_partitioning=[true]                                                                                                                                                  |
|               |     CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                               |
|               |       FilterExec: another_column@1 != something, projection=[pk@0, score@2]                                                                                                                                                   |
|               |         ProjectionExec: expr=[pk@1 as pk, another_column@0 as another_column, score@2 as score]                                                                                                                               |
|               |           CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                         |
|               |             HashJoinExec: mode=CollectLeft, join_type=Right, on=[(pk@0, pk@0)], filter=a_number@0 > 0, projection=[another_column@1, pk@2, score@4]                                                                           |
|               |               DataSourceExec: partitions=1, partition_sizes=[1]                                                                                                                                                               |
|               |               RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                            |
|               |                 ExplainExecutionPlan: projection=["pk", "a_number", "score"] filter=[BinaryExpr(BinaryExpr { left: Column(Column { relation: None, name: "a_number" }), op: Gt, right: Literal(Int64(0), None) })] limit=None |
|               |                                                                                                                                                                                                                               |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
