crates/runtime/src/embeddings/index/snapshots/runtime__embeddings__index__tests__query_table_join_for_filter_use_multiple_pk.snap
---
source: crates/runtime/src/embeddings/index/mod.rs
expression: "format!(\"{}\", pretty::pretty_format_batches(&col).map_err(|e| e.to_string())?)"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                         |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: my_vectored_table.score DESC NULLS FIRST, fetch=5                                                                                                                                                                                      |
|               |   Projection: my_vectored_table.pk1, my_vectored_table.pk2, my_vectored_table.pk3, my_vectored_table.score                                                                                                                                   |
|               |     Filter: my_vectored_table.another_column != Utf8("something")                                                                                                                                                                            |
|               |       TableScan: my_vectored_table projection=[pk1, pk2, pk3, another_column, score], full_filters=[my_vectored_table.a_number > Int64(0)]                                                                                                   |
| physical_plan | SortPreservingMergeExec: [score@3 DESC], fetch=5                                                                                                                                                                                             |
|               |   SortExec: TopK(fetch=5), expr=[score@3 DESC], preserve_partitioning=[true]                                                                                                                                                                 |
|               |     CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                              |
|               |       FilterExec: another_column@3 != something, projection=[pk1@0, pk2@1, pk3@2, score@4]                                                                                                                                                   |
|               |         ProjectionExec: expr=[pk1@1 as pk1, pk2@2 as pk2, pk3@3 as pk3, another_column@0 as another_column, score@4 as score]                                                                                                                |
|               |           CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                        |
|               |             HashJoinExec: mode=CollectLeft, join_type=Right, on=[(pk1@0, pk1@0), (pk2@1, pk2@1), (pk3@2, pk3@2)], filter=a_number@0 > 0, projection=[another_column@3, pk1@4, pk2@5, pk3@6, score@8]                                         |
|               |               DataSourceExec: partitions=1, partition_sizes=[1]                                                                                                                                                                              |
|               |               RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                           |
|               |                 ExplainExecutionPlan: projection=["pk1", "pk2", "pk3", "a_number", "score"] filter=[BinaryExpr(BinaryExpr { left: Column(Column { relation: None, name: "a_number" }), op: Gt, right: Literal(Int64(0), None) })] limit=None |
|               |                                                                                                                                                                                                                                              |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
