crates/runtime/src/embeddings/index/snapshots/runtime__embeddings__index__tests__query_table_no_join_for_metadata_filter.snap
---
source: crates/runtime/src/embeddings/index/mod.rs
expression: "format!(\"{}\", pretty::pretty_format_batches(&col).map_err(|e| e.to_string())?)"
---
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                          |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: my_vectored_table.score DESC NULLS FIRST, fetch=5                                                                                                                                                       |
|               |   TableScan: my_vectored_table projection=[pk, score], full_filters=[my_vectored_table.a_number > Int64(0)]                                                                                                   |
| physical_plan | SortPreservingMergeExec: [score@1 DESC], fetch=5                                                                                                                                                              |
|               |   SortExec: TopK(fetch=5), expr=[score@1 DESC], preserve_partitioning=[true]                                                                                                                                  |
|               |     ProjectionExec: expr=[CAST(key@0 AS Int64) as pk, 1 - distance@1 as score]                                                                                                                                |
|               |       RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                    |
|               |         ExplainExecutionPlan: projection=["key", "distance"] filter=[BinaryExpr(BinaryExpr { left: Column(Column { relation: None, name: "a_number" }), op: Gt, right: Literal(Int64(0), None) })] limit=None |
|               |                                                                                                                                                                                                               |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
